-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.2.1
-
None
-
qtcreator -version
Qt Creator 3.2.1 based on Qt 5.3.2
uname -a
Linux ubuntu 3.13.0-32-generic #57-Ubuntu SMP Tue Jul 15 03:51:08 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux
We have a CMake project with many targets. When selecting a target towards the end of the list in the make build step QtCreator dumps core. It seems to vary how close to the end of the list I can go before it crashes.
I have attached a minimal example that reproduces the problem.
Open it in QtCreator and select the last target in the list in the build settings.
For Gerrit Dashboard: QTCREATORBUG-13129 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
96437,2 | CMakeProjectManager: Fix crash on selecting make target | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |