CMakeProjectManager: Fix crash on selecting make target

Task-number: QTCREATORBUG-13129
Change-Id: Ie964e547809ee7626c526a6a3f5741f19b8a2f0f
Reviewed-by: Eike Ziller <eike.ziller@digia.com>